--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.ML.TimeSeries" Version="1.5.0-preview" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
+    <PackageReference Include="Profanity.Detector" Version="0.1.8" />
     <PackageReference Include="Serilog" Version="2.11.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.4.0" />
