--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "apexcharts": "^3.35.4",
     "jwt-decode": "^3.1.2",
     "ng-apexcharts": "^1.7.1",
+    "ngx-hide-on-scroll": "^0.2.1",
     "ngx-picture": "^3.0.0-alpha.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
